# hi2

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  MIGRATION.md  README.md
.github/workflows/: pages.yml
a/: CONTRACTS.md  LAYERING.md  README.md  a.hpp  arena.hpp  bit.hpp  bounded.hpp  charconv_base.hpp  config.hpp  contract.hpp  math.hpp  memory_requirements.hpp  meta.hpp  profile.hpp  status.hpp  two_pass.hpp  types.hpp  utf8.hpp  utility.hpp  view.hpp
a/crypto/: aead_chacha20_poly1305.hpp  chacha20.hpp  poly1305.hpp  sha256.hpp  sha384.hpp  x25519.hpp
a/crypto/detail/: ct.hpp  load_store.hpp  wipe.hpp
a/detail/: arch.hpp
a/docs/: README.md  api-atlas.html  cpp-knowledge.html  crypto-guide.html  index.html  memory-model.html  modules.html  recipes.html  two-pass-guide.html
a/docs/source/: a.hpp.html  arena.hpp.html  bit.hpp.html  bounded.hpp.html  charconv_base.hpp.html  config.hpp.html  contract.hpp.html  crypto__aead_chacha20_poly1305.hpp.html  crypto__chacha20.hpp.html  crypto__detail__ct.hpp.html  crypto__detail__load_store.hpp.html  crypto__detail__wipe.hpp.html  crypto__poly1305.hpp.html  crypto__sha256.hpp.html  (+14 more)
b/: PORTING.md  README.md  b.hpp  capabilities.hpp  port_contract.hpp  thread.cpp  thread.hpp  time.cpp  time.hpp
b/detail/: port_contract.hpp
b/docs/: index.html  modules.html  porting.html  styles.css
b/net/: socket.cpp  socket.hpp
c/: README.md  c.hpp
c/app/: window.hpp
c/net/: reliable_udp.hpp
d/: README.md  d.hpp
examples/: client.cpp  crypto.cpp  gl.cpp  hi.cpp  server.cpp  threadpool_vtune.cpp
examples/tests/: atomic.hpp  audio_test_utils.hpp  containers.hpp  file.hpp  filesystem.hpp  opengl.cpp  syscalls.hpp  test_aead_chacha20_poly1305.hpp  test_audio.cpp  test_audio_mixer.cpp  test_audio_scheduler.cpp  test_chacha20.hpp  test_client.cpp  test_fade_in_out.cpp  test_poly1305.hpp  test_server.cpp  test_sha256.hpp  test_sha384.hpp  test_socket.hpp  test_wav.cpp  test_x25519.hpp  thread.cpp  types.hpp
hi/: README.md  audiocontext.hpp  gl_loader.hpp  hi.hpp  io.hpp  socket.hpp
hi/crypto/: aead_chacha20_poly1305.hpp  chacha20.hpp  poly1305.hpp  sha256.hpp  sha384.hpp  x25519.hpp
(+106 files in other folders)
